# novels

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-2-link
novels/: __init__.py  cli.py  items.py  middlewares.py  pipelines.py  settings.py
novels/spiders/: webnovel_crawler.py
src/novels/: cli.py  scraper.py
